--- a/Quicklink.html
+++ b/Quicklink.html
@@ -246,7 +246,7 @@
                                     padding-top: 15px; " >
                     <div style="font-size: 24px;font-family: 等线;font-weight: bold;background-color: bisque;padding: 10px;">其他</div>
                     <ul style="font-size: small;">
-                        <li><a href="https://net.sjtu.edu.cn/" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">上海交通大学网络中心</a></li>
+                        <li><a href="https://mr-addict.github.io/qndxx-screenshort-generator/" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">理论学习网址 1</a></li>
                         <li><a href="http://lic.si.sjtu.edu.cn/Default/index" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">上海交通大学软件授权中心</a></li>
                         <li><a href="https://vi.sjtu.edu.cn/index.php/articles/bulletin/13" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">上海交通大学视觉识别系统</a></li>
                         <li><a href="https://gitee.com/dashboard" style="font-size: 16px;font-family: 微软雅黑;text-decoration: none;color:black;" target="_blank">Gitee</a></li>
