--- a/Quicklink.html
+++ b/Quicklink.html
@@ -5,7 +5,7 @@
 <title>Department of Computer Science and Medical Interdisciplinary Engineering</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="imagetoolbar" content="no" />
-<link rel="stylesheet" href="css/layout.css" type="text/css" />
+<link rel="stylesheet" href="index/css/layout.css" type="text/css" />
 
 </head>
 <body id="top">
