--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
 <title>统一身份认证</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="imagetoolbar" content="no" />
-<link rel="stylesheet" href="css/layout.css" type="text/css" />
+<link rel="stylesheet" href="index/css/layout.css" type="text/css" />
 <style>
 	input[type=text], select {
   width: 100%;
