--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="txtList5-m1">
                           <div class="date"><div class="k1"><p>23</p><h3>03</h3></div></div><!-- date end -->
                           <div class="txt1">
-                            <h3><a href='index/Examschedule.html' target='_blank' title='关于2022-2023学年春季学期期末考试时间安排发布的通知'>关于2022-2023学年春季学期期末考试时间安排发布的通知</a></h3>
+                            <h3><a href='index/Examschedule.html' title='关于2022-2023学年春季学期期末考试时间安排发布的通知'>关于2022-2023学年春季学期期末考试时间安排发布的通知</a></h3>
                           </div><!-- txt1 end -->
                         </div>
                       </li>
@@ -112,7 +112,7 @@
                         <div class="txtList5-m1">
                           <div class="date"><div class="k1"><p>22 </p><h3>02 </h3></div></div><!-- date end -->
                           <div class="txt1">
-                            <h3><a href='index/Select.html' target='_blank' title='关于2022-2023学年春季学期学生选课通知'>关于2022-2023学年春季学期学生选课通知</a></h3>
+                            <h3><a href='index/Select.html' title='关于2022-2023学年春季学期学生选课通知'>关于2022-2023学年春季学期学生选课通知</a></h3>
                           </div><!-- txt1 end -->
                         </div>
                       </li>
@@ -121,7 +121,7 @@
                         <div class="txtList5-m1">
                           <div class="date"><div class="k1"><p> 17</p><h3>02 </h3></div></div><!-- date end -->
                           <div class="txt1">
-                            <h3><a href='index/exam-time.html ' target='_blank' title='关于2022-2023学年春季学期期末考试时间查询的通知'>关于2022-2023学年春季学期期末考试时间查询的通知</a></h3>
+                            <h3><a href='index/exam-time.html ' title='关于2022-2023学年春季学期期末考试时间查询的通知'>关于2022-2023学年春季学期期末考试时间查询的通知</a></h3>
                           </div><!-- txt1 end -->
                         </div>
                       </li>
@@ -130,7 +130,7 @@
                         <div class="txtList5-m1">
                           <div class="date"><div class="k1"><p>16 </p><h3>02</h3></div></div><!-- date end -->
                           <div class="txt1">
-                            <h3><a href='index/calendar.html ' target='_blank' title='2022-2023学年春季学期校历'>2022-2023学年春季学期校历</a></h3>
+                            <h3><a href='index/calendar.html ' title='2022-2023学年春季学期校历'>2022-2023学年春季学期校历</a></h3>
                           </div><!-- txt1 end -->
                         </div>
                       </li>
@@ -147,7 +147,7 @@
                     <div class="txtList5-m1">
                       <div class="date"><div class="k1"><p>17</p><h3>02</h3></div></div><!-- date end -->
                       <div class="txt1">
-                        <h3><a href='index/timetable.html' target='_blank' title='学生上课时间查询'>学生上课时间查询</a></h3>
+                        <h3><a href='index/timetable.html' title='学生上课时间查询'>学生上课时间查询</a></h3>
                       </div><!-- txt1 end -->
                     </div>
                   </li>
