--- a/Login.html
+++ b/Login.html
@@ -59,7 +59,7 @@ input[type=submit]:hover {
       <tbody>
         <tr>
           <td  width="100%" valign="middle" style="word-break: break-all;" align="left">
-            <img src="image/tyrz.png" alt="Newterm" width="630" height="90">
+            <img src="image/tyrz.png" width="630">
           </td>
         </tr>
       </tbody>
