--- a/index/overall.html
+++ b/index/overall.html
@@ -114,7 +114,7 @@
                                       <div class="txtList5-m1" style="border-bottom: 1px solid #d9d9d9;">
                                         <div class="date"><div class="k1"><p>23</p><h3>03</h3></div></div><!-- date end -->
                                         <div class="txt1">
-                                          <h3><a href='index/Examschedule.html' title='关于2022-2023学年春季学期期末考试时间安排发布的通知'>关于2022-2023学年春季学期期末考试时间安排发布的通知</a></h3><br>
+                                          <h3><a href='Examschedule.html' title='关于2022-2023学年春季学期期末考试时间安排发布的通知'>关于2022-2023学年春季学期期末考试时间安排发布的通知</a></h3><br>
                                         </div><!-- txt1 end -->
                                       </div>
                                     </li>
@@ -123,7 +123,7 @@
                                       <div class="txtList5-m1" style="border-bottom: 1px solid #d9d9d9;">
                                         <div class="date"><div class="k1"><p>22 </p><h3>02 </h3></div></div><!-- date end -->
                                         <div class="txt1">
-                                          <h3><a href='index/Select.html' title='关于2022-2023学年春季学期学生选课通知'>关于2022-2023学年春季学期学生选课通知</a></h3><br>
+                                          <h3><a href='Select.html' title='关于2022-2023学年春季学期学生选课通知'>关于2022-2023学年春季学期学生选课通知</a></h3><br>
                                         </div><!-- txt1 end -->
                                       </div>
                                     </li>
@@ -132,7 +132,7 @@
                                       <div class="txtList5-m1" style="border-bottom: 1px solid #d9d9d9;">
                                         <div class="date"><div class="k1"><p> 17</p><h3>02 </h3></div></div><!-- date end -->
                                         <div class="txt1">
-                                          <h3><a href='index/exam-time.html ' title='关于2022-2023学年春季学期期末考试时间查询的通知'>关于2022-2023学年春季学期期末考试时间查询的通知</a></h3><br>
+                                          <h3><a href='exam-time.html ' title='关于2022-2023学年春季学期期末考试时间查询的通知'>关于2022-2023学年春季学期期末考试时间查询的通知</a></h3><br>
                                         </div><!-- txt1 end -->
                                       </div>
                                     </li>
@@ -141,7 +141,7 @@
                                       <div class="txtList5-m1" style="border-bottom: 1px solid #d9d9d9;">
                                         <div class="date"><div class="k1"><p>16 </p><h3>02</h3></div></div><!-- date end -->
                                         <div class="txt1">
-                                          <h3><a href='index/calendar.html ' title='2022-2023学年春季学期校历'>2022-2023学年春季学期校历</a></h3><br>
+                                          <h3><a href='calendar.html ' title='2022-2023学年春季学期校历'>2022-2023学年春季学期校历</a></h3><br>
                                         </div><!-- txt1 end -->
                                       </div>
                                     </li>
