--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -173,7 +173,7 @@
 										</tr>
 									</thead>
 
-									<tbody style="background-color:lightyellow;">
+									<tbody style="background-color:lightcyan;">
 										<tr style="background-color: lightcyan;">
 											<td width="10%"><div align="center">3/4</div></td>
 											<td width="30%"><div align="left" style="padding-left: 15px;">线性结构1</div></td>
