--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body id="top">
 
-<div class="wrapper row1" style="background-image: linear-gradient(	#404040,#F8F8F8);" >
+<div class="wrapper row1" style="background-image: linear-gradient(	#404040,white);" >
   <div id="header" class="clear">
     <table  width="100%" border="0" cellspacing="0" cellpadding="0">
       <tbody>
@@ -67,13 +67,16 @@
       </tbody>
     </table>
   </div>
+  <div style="background-color: #F8F8F8; border: #F8F8F8;" >
+    
+  </div>
 </div>
 <!-- ####################################################################################################### -->
 <table>
   <tbody>
     <tr valign="top" >
       <td style="width:80%;">
-        <div class="wrapper row3">
+        <div class="wrapper row3" style="background-color: #F8F8F8;">
           <div id="container" class="clear">
             <!-- ####################################################################################################### -->
             <div id="homepage" class="clear">
@@ -312,7 +315,7 @@
 <!----CopyRight-->
 
 <div style="background-color:#023474;font-family:Arial, Helvetica, sans-serif; text-align: center;color: white; font-size: small;padding-bottom: 10px;padding-top: 0px;">
-  <br>
+  <br><br>
   <table  width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: auto;background-color:#023474;padding-left: 30px;padding-right: 30px;">
     <tbody>
       <tr> 
