--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -119,6 +119,12 @@
                                                                         NJU-ICS-Lab
                                                                     </a>
                                                                 </li>
+
+																<li>
+                                                                    <a href=" https://www.aliyundrive.com/drive/folder/642fd6f531fd10fe4cc84fdf9cc79567aa6445b0 " target="_blank" style="text-decoration:none;color: blue;">
+                                                                        课件下载
+                                                                    </a>
+                                                                </li>
                                                         </ul>
                                                     </p>
                                                 </td>
