--- a/Canvas/Homepage/0x00.studentenquiry.html
+++ b/Canvas/Homepage/0x00.studentenquiry.html
@@ -4,6 +4,7 @@
     <head>
         <title>Student Enquiry</title>
         <link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
+        <link rel="shortcut icon" href="CSE-MED">
         <meta http-equiv="pragma" content="no-cache">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport"content="width=device-width,initial-scale=1.0,maximum-scale=1,user-scalable=no" />
