--- a/Canvas/Homepage/CS0501.html
+++ b/Canvas/Homepage/CS0501.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+		<link rel="shortcut icon" href="CSE-MED">
         <title>CS0501 Data Structure</title>
 		<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
         <meta http-equiv="pragma" content="no-cache">
