--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -3,6 +3,7 @@
 
 <html>
     <head>
+		<link rel="shortcut icon" href="CSE-MED">
         <title>CS2307 Computer Organization</title>
 		<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
         <meta http-equiv="pragma" content="no-cache">
