--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -179,7 +179,15 @@
 											<td width="10%"><div align="center">4/3</div></td>
 											<td width="30%"><div align="center">Chapter 1 Revision</div></td>
 											<td width="30%"><div align="center">After Class Reading / Lab</div></td>
-											<td width="30%"><div align="center"></div></td>	
+											<td width="30%"><div align="center">
+												<li>
+													<a href="material/CS2307/Chapter 1 计算机系统概述.html" target="_blank" style="text-decoration:none;color: blue;">
+														Revision
+													</a>
+												</li>
+
+
+											</div></td>	
 										</tr>
 										
 										<tr>
