--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -178,7 +178,15 @@
 										<tr>
 											<td width="10%"><div align="center">4/3</div></td>
 											<td width="30%"><div align="center">Chapter 1 Revision</div></td>
-											<td width="30%"><div align="center">After Class Reading / Lab</div></td>
+											<td width="30%"><div align="center">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2307%20Computer%20Organization/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E4%B9%A0%E9%A2%98.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													hw-1
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2307%20Computer%20Organization/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													solution
+												</a>
+											</div></td>
 											<td width="30%"><div align="center">
 												<li>
 													<a href="material/CS2307/Chapter 1 计算机系统概述.html" target="_blank" style="text-decoration:none;color: blue;">
