--- a/Canvas/Homepage/CS2310.html
+++ b/Canvas/Homepage/CS2310.html
@@ -173,14 +173,25 @@
 											<td width="10%"><div align="center">4.9</div></td>
 											<td width="30%"><div align="center">1.1-1.3</div></td>
 											<td width="30%"><div align="center">Referencebook for Examination</div></td>
-											<td width="30%"><div align="center"></div></td>	
+											<td width="30%"><div align="center">
+												
+											</div></td>	
 										</tr>
 										
 										<tr>
 											<td width="10%"><div align="center">4.10</div></td>
 											<td width="30%"><div align="center">1.4-1.5</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
-											<td width="30%"><div align="center"></div></td>	
+											<td width="30%"><div align="center">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E4%B9%A0%E9%A2%98.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													hw-1
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													solution
+												</a>
+											</div></td>
+											<td width="30%"><div align="center">
+											</div></td>	
 										</tr>
 
 										<tr>
