--- a/Canvas/Homepage/CS2310.html
+++ b/Canvas/Homepage/CS2310.html
@@ -182,11 +182,11 @@
 											<td width="10%"><div align="center">4.10</div></td>
 											<td width="30%"><div align="center">1.4-1.5</div></td>
 											<td width="30%"><div align="center">
-												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E4%B9%A0%E9%A2%98.pdf" target="_blank" style="text-decoration:none;color: blue;">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0.pdf" target="_blank" style="text-decoration:none;color: blue;">
 													hw-1
 												</a>
 												&ensp;
-												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
 													solution
 												</a>
 											</div></td>
@@ -231,7 +231,19 @@
 										<tr>
 											<td width="10%"><div align="center">4.18</div></td>
 											<td width="30%"><div align="center">2.4.3-2.4.4</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%BA%8C%E7%AB%A0%E4%B9%A0%E9%A2%98.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													hw-2
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%BA%8C%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%881.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													solution-1
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%BA%8C%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%882.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													solution-2
+												</a>
+											</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
@@ -252,14 +264,30 @@
 										<tr>
 											<td width="10%"><div align="center">4.22</div></td>
 											<td width="30%"><div align="center">3.2.1-3.2.5</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%89%E7%AB%A0%E4%B9%A0%E9%A2%98.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													hw-3
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%B8%89%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													solution
+												</a>
+											</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
 										<tr>
 											<td width="10%"><div align="center">4.24</div></td>
 											<td width="30%"><div align="center">4.1.1-4.1.5</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E5%9B%9B%E7%AB%A0%E4%B9%A0%E9%A2%98.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													hw-4
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E5%9B%9B%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													solution
+												</a>
+											</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
@@ -273,7 +301,15 @@
 										<tr>
 											<td width="10%"><div align="center">4.29</div></td>
 											<td width="30%"><div align="center">5.2.4-5.3</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center">
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%BA%94%E7%AB%A0%E4%B9%A0%E9%A2%98.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													hw-5
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2310%20Operating%20Systems/HW/%E7%AC%AC%E4%BA%94%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													solution
+												</a>
+											</div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
