--- a/Canvas/Homepage/CS2310.html
+++ b/Canvas/Homepage/CS2310.html
@@ -172,7 +172,7 @@
 										<tr>
 											<td width="10%"><div align="center">4.9</div></td>
 											<td width="30%"><div align="center">1.1-1.3</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center">
 												
 											</div></td>	
@@ -197,34 +197,34 @@
 										<tr>
 											<td width="10%"><div align="center">4.13</div></td>
 											<td width="30%"><div align="center">2.1.1-2.1.4</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
 										<tr>
 											<td width="10%"><div align="center">4.14</div></td>
 											<td width="30%"><div align="center">2.1.5-2.2.4</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
 										<tr>
 											<td width="10%"><div align="center">4.15</div></td>
 											<td width="30%"><div align="center">2.2.5-2.2.7</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
 										<tr>
 											<td width="10%"><div align="center">4.16</div></td>
 											<td width="30%"><div align="center">2.3.1-2.3.8</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 										<tr>
 											<td width="10%"><div align="center">4.17</div></td>
 											<td width="30%"><div align="center">2.3.9-2.4.2</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
@@ -250,14 +250,14 @@
 										<tr>
 											<td width="10%"><div align="center">4.20</div></td>
 											<td width="30%"><div align="center">3.1.1-3.1.6</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
 										<tr>
 											<td width="10%"><div align="center">4.21</div></td>
 											<td width="30%"><div align="center">3.1.7-3.1.11</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
@@ -294,7 +294,7 @@
 										<tr>
 											<td width="10%"><div align="center">4.27</div></td>
 											<td width="30%"><div align="center">5.1.1-5.2.3</div></td>
-											<td width="30%"><div align="center">Referencebook for Examination</div></td>
+											<td width="30%"><div align="center"></div></td>
 											<td width="30%"><div align="center"></div></td>	
 										</tr>
 
