--- a/Canvas/Homepage/CS2307.html
+++ b/Canvas/Homepage/CS2307.html
@@ -149,7 +149,7 @@
 				<td style="width: 2%;">
 					&ensp;
 				</td>
-				<td style="width: 3%;background-color: #DDF8FF;font-size: smaller;text-align: center;font-weight: bold;">
+				<td style="width: 3%;background-color: lightcyan;font-size: smaller;text-align: center;font-weight: bold;">
 					DONE
 				</td>
 				<td style="width: 2%;">
@@ -185,6 +185,10 @@
 												&ensp;
 												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2307%20Computer%20Organization/HW/%E7%AC%AC%E4%B8%80%E7%AB%A0%E4%B9%A0%E9%A2%98%E7%AD%94%E6%A1%88.pdf" target="_blank" style="text-decoration:none;color: blue;">
 													solution
+												</a>
+												&ensp;
+												<a href="https://gitee.com/Jinhang_Qiu/Course-Materials/raw/master/CS2307%20Computer%20Organization/Reading%20materials/%E7%94%B5%E8%B7%AF%E5%9F%BA%E7%A1%80.pdf" target="_blank" style="text-decoration:none;color: blue;">
+													Reading Material
 												</a>
 											</div></td>
 											<td width="30%"><div align="center">
