--- a/index.html
+++ b/index.html
@@ -197,6 +197,14 @@
                       </div><!-- txt1 end -->
                     </div>
                   </li>
+                  <li>
+                    <div class="txtList5-m1">
+                      <div class="date"><div class="k1"><p>20</p><h3>04</h3></div></div><!-- date end -->
+                      <div class="txt1">
+                        <h3><a href='https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure/raw/master/03%20%E8%AF%BE%E7%A8%8B%E5%A4%A7%E8%A1%A8%E4%B8%8E%E6%95%99%E5%AD%A6%E6%97%A5%E5%8E%86/03%20%E6%95%99%E5%AD%A6%E8%AE%A1%E5%88%92%E5%8F%98%E6%9B%B4/2022-2023-2-%E7%AC%AC%E4%BA%8C%E9%98%B6%E6%AE%B5.pdf' title='第二阶段教学计划' target="_blank">关于2022-2023学年春季学期部分课程教学进度调整的通知</a></h3>
+                      </div><!-- txt1 end -->
+                    </div>
+                  </li>
                 </ul><!-- txtList5 end -->
               </div><br><br>
               <div style="background-image: linear-gradient(to right  #c2d2e8,#F8F8F8)">
