--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@
                     <td style="width: 30%;"  valign="top">
                       <div id="latestnews" style="font-size: medium;font-family:微软雅黑;line-height:30px;">
                         <ul class="LLvertical-menu">
+                        
                         <div style="font-size: 18px;font-weight:bold;color:#B01F24;text-align: left;font-family: 微软雅黑;line-height: 40px;border-bottom: 1px solid #d9d9d9;">
-                          医学院本科教学
+                          <a href="https://gitee.com/Jinhang_Qiu/Download" style="text-decoration: none;color:#B01F24;" target="_blank">医学院本科教学</a>
                         </div><br>
                           <li><a href="https://gitee.com/Jinhang_Qiu/Download/tree/master/BM211%20%E7%97%85%E5%8E%9F%E7%94%9F%E7%89%A9%E5%AD%A6" style="color: black;text-decoration: none;" target="_blank" >病原生物学</a></li>
                           <br><li><a href="https://gitee.com/Jinhang_Qiu/Download/raw/master/BE211%20%E7%BB%86%E8%83%9E%E4%B8%8E%E5%88%86%E5%AD%90%E7%94%9F%E7%89%A9%E5%AD%A6%E5%AE%9E%E9%AA%8C/%E5%AE%9E%E9%AA%8C%E6%8A%A5%E5%91%8A%E6%A8%A1%E6%9D%BF.docx" style="color: black;text-decoration: none;" target="_blank" >细胞与分子生物学实验</a></li>
