--- a/Quicklink.html
+++ b/Quicklink.html
@@ -20,12 +20,11 @@
         <tbody>
           <tr>
             <td  width="35%" valign="middle" style="word-break: break-all;" align="left" rowspan="2">
-              <h1><a href="index.html"><font face="Times">
+              <a href="index.html">
                 <img src="image/CSMIE.png" width="400" >
-              </font></a></h1>
+              </a>
             </td>
             <td  width="65%" valign="middle" style="word-break: break-all;text-align: right;">
-              <p>
                 <div id="time" style="font-family:微软雅黑;font-size: medium;color:white;"></div>
                 <div style="font-family:微软雅黑;font-size: medium;">
                   <script type="text/javascript"> 
@@ -46,7 +45,6 @@
                     },1000);
                   </script>
                 </div>
-              </p>
             </td>
           </tr>
           <tr>
@@ -71,6 +69,7 @@
 <!-- ####################################################################################################### -->
 <div class="wrapper row3">
   <div id="container" class="clear" style="line-height: 30px;">
+    <br><br><br>
     <table>
       <tbody>
         <tr valign="top" >
