--- a/Canvas/Homepage/Schedule/sy.html
+++ b/Canvas/Homepage/Schedule/sy.html
@@ -120,6 +120,8 @@
                         <b>LEC 7:</b> Machine Prog: Data <br />
                         <span class="reading"><b>Video</b>: <a href="https://www.bilibili.com/video/BV1iW411d7hd/">CMU 15-213 ICS</a></span><br>
                         <span class="reading"><b>Homepage</b>: <a href="https://www.cs.cmu.edu/~213/">Homepage</a></span><br>
+                        <span class="deadline"><b>Due: Datalab #Lab1</b></span><br>
+                        <span class="reading"><b>Lab 2</b>: Boomlab</span> <br>
                     </Day>
                 <!-- Week 3: Thursday -->
                     <Day class="lecture"><br>
@@ -134,19 +136,83 @@
                         <span class="reading"><b>Homepage</b>: <a href="https://www.cs.cmu.edu/~213/">Homepage</a></span><br>
                     </Day>
                 </Week>
-            <!-- Week 17 -->
-            <Week>
-            <!-- Week 17: Monday -->
-                <Day class="quiz"><br><b>Final exam</b> </Day>
-            <!-- Week 17: Tuesday -->
-                <Day class="holiday"><br></Day>
-            <!-- Week 17: Wednesday -->
-                <Day class="holiday"><br></Day>
-            <!-- Week 17: Thursday -->
-                <Day class="holiday"><br></Day>
-            <!-- Week 17: Friday -->
-                <Day class="holiday"><br></Day>
-            </Week>
+                <!-- Week 4 -->
+                <Week>
+                <!-- Monday -->
+                    <Day class="quiz"><br><b>Final exam</b> </Day>
+                <!-- Tuesday -->
+                    <Day class="holiday"><br></Day>
+                <!-- Wednesday -->
+                    <Day class="lab"><br>
+                        <span class="deadline"><b>Due: Boomlab #Lab2</b></span><br>
+                        <span class="reading"><b>Lab 3</b>: Attacklab</span> <br>
+                    </Day>
+                <!-- Thursday -->
+                    <Day class="holiday"><br></Day>
+                <!-- Friday -->
+                    <Day class="holiday"><br></Day>
+                </Week>
+
+                <!-- Week 5-->
+                <Week>
+                <!-- Monday -->
+                    <Day class="holiday"><br><b></b> </Day>
+                <!-- Tuesday -->
+                    <Day class="holiday"><br></Day>
+                <!-- Wednesday -->
+                    <Day class="lab"><br>
+                        <span class="deadline"><b>Due: Attacklab #Lab3</b></span><br>
+                        <span class="reading"><b>Lab 4</b>: Cachelab</span> <br>
+                    </Day>
+                <!-- Thursday -->
+                    <Day class="holiday"><br></Day>
+                <!-- Friday -->
+                    <Day class="holiday"><br></Day>
+                </Week>
+
+                <!-- Week 6-->
+                <Week>
+                <!-- Monday -->
+                    <Day class="holiday"><br><b></b> </Day>
+                <!-- Tuesday -->
+                    <Day class="holiday"><br></Day>
+                <!-- Wednesday -->
+                    <Day class="lab"><br>
+                        <span class="deadline"><b>Due: Cachelab #Lab4</b></span><br>
+                    </Day>
+                <!-- Thursday -->
+                    <Day class="holiday"><br></Day>
+                <!-- Friday -->
+                    <Day class="holiday"><br></Day>
+                </Week>
+
+                <!-- Week 7-->
+                <Week>
+                <!-- Monday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Tuesday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Wednesday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Thursday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Friday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                </Week>
+
+                <!-- Week 8-->
+                <Week>
+                <!-- Monday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Tuesday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Wednesday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Thursday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                <!-- Friday -->
+                    <Day class="special"><br><i>Final Exam Week</i> </Day>
+                </Week>
         </Calendar>
 
         <script type="text/javascript">
