--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="imagetoolbar" content="no" />
   <link rel="stylesheet" href="css/layout.css" type="text/css" />
+  <link rel="stylesheet" href="index/css/sy-adoption.css" type="text/css" />
   
 <!-- End Homepage Specific Elements -->
 <body>
