--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
           </tr>
         </tbody>
       </table>
-
     </div>
   </div>
 <!-- header End-->
-  
-  <br><br><br><br><br><br><br><br><br><br>
+  <div><img src="image/sit_img1.png" width="100%" class="pic_sy1"></div>
+  <img src="image/sit_img2.png" width="100%" class="pic_sy2">
   <div class="content">
     <div class="main_content">
           <table style="width: 100%;">
