--- a/Quicklink.html
+++ b/Quicklink.html
@@ -41,23 +41,26 @@
       <table style="width: 100%;">
         <tbody><tr>
           <td style="width: 40%;" >
-            <div class="sy-tit">
+            <div class="sy-tit2">
               <div class="en">LINK</div><div class="tit">友情链接</div>
             </div>
           </td>
           <td style="width:60%;">
-            <div class="location">当前位置：
-            <a href="https://computersciencekaoyan.github.io/">首页</a>
+            <div class="location">
+              <a href="https://computersciencekaoyan.github.io/">
+                <img src="image/首页_home.png" alt="CSMIE" class="location_img">
+              </a>
+              <a href="https://computersciencekaoyan.github.io/">首页</a>
               ·
-            <a href="Quicklink.html">友情链接</a>
-          </div>
+              <a href="Quicklink.html">友情链接</a>
+            </div>
           </td>
         </tr></tbody>
       </table>
       <div class="cardBox">
         <div class="LLvertical-menu"><ul>
           <div class="download_subtitle">教学信息</div>
-          <li><a href="https://i.sjtu.edu.cn/xtgl/login_slogin.html" style="color: black;text-decoration: none;" target="_blank" >教学信息服务网</a></li>
+          <li><a href="https://i.sjtu.edu.cn/xtgl/login_slogin.html" class="linkpage_reference" target="_blank" >教学信息服务网</a></li>
           <li><a href="https://jwc.sjtu.edu.cn/" class="linkpage_reference" target="_blank" >上海交通大学教务处</a></li>
           <li><a href="https://www.seiee.sjtu.edu.cn/" class="linkpage_reference" target="_blank" >上海交通大学电子信息与电气工程学院</a></li>
           <li><a href="https://bjwb.seiee.sjtu.edu.cn/" class="linkpage_reference" target="_blank" >电院本科教务处</a></li>
@@ -90,6 +93,7 @@
       <div class="cardBox">
         <div class="LLvertical-menu"><ul>
           <div class="download_subtitle">课程中心</div>
+          <li><a href="https://oc.sjtu.edu.cn/" class="linkpage_reference" target="_blank" >Canvas@SJTU</a></li>
             <li><a href="https://acm.sjtu.edu.cn/wiki/%E8%AF%BE%E7%A8%8B%E4%B8%AD%E5%BF%83" class="linkpage_reference" target="_blank" >ACM课程中心</a></li>
             <li><a href="https://computersciencekaoyan.github.io/Canvas/canvas.html" class="linkpage_reference" target="_blank" >Canvas@CSMIE</a></li>
             <li><a href="https://gitee.com/Jinhang_Qiu/Course-Materials" class="linkpage_reference" target="_blank" >CSMIE课程中心</a></li>
@@ -113,7 +117,6 @@
             <li><a href="http://www.grs.zju.edu.cn/yjszs/" class="linkpage_reference" target="_blank" >浙江大学研招网</a></li>
             <li><a href="https://yzb.nju.edu.cn/47863/list.htm" class="linkpage_reference" target="_blank" >南京大学研招网</a></li>
             <li><a href="https://admission.pku.edu.cn/" class="linkpage_reference" target="_blank" >北京大学研招网</a></li>
-            <li><a href="https://yz.ustc.edu.cn/?num=-1" class="linkpage_reference" target="_blank" >中国科技大学研招网</a></li>
         </ul></div>
       </div>
 
