--- a/Quicklink.html
+++ b/Quicklink.html
@@ -34,8 +34,8 @@
     </div>
   </div>
 <!-- header End-->
-  <div><img src="image/sit_img1.png" width="100%" class="pic_sy1"></div>
-  <img src="image/sit_img2.png" width="100%" class="pic_sy2">
+  <div><img src="image/quick_link_img/quick_link_img1.png" width="100%" class="pic_sy1"></div>
+  <img src="image/quick_link_img/quick_link_img2.png" width="100%" class="pic_sy2">
   <div class="content">
     <div class="main_content_branch">
       <table style="width: 100%;">
@@ -45,7 +45,7 @@
               <div class="en">LINK</div><div class="tit">友情链接</div>
             </div>
           </td>
-          <td style="width:60%;">
+          <td style="width:50%;">
             <div class="location">
               <a href="https://computersciencekaoyan.github.io/">
                 <img src="image/首页_home.png" alt="CSMIE" class="location_img">
@@ -157,7 +157,7 @@
             Copyright &copy; All Rights Reserved <br>
             2023 Computer Science and Medical <br class="h_br">Interdisciplinary Engineering <br>
             <a href="index/Legal Info.html" target="_blank" class="cpy_link">Legal Info</a>&ensp;|&ensp;
-            <a href="index.html" target="_blank" class="cpy_link">CSMIE</a>
+            <a href="https://computersciencekaoyan.github.io/" target="_blank" class="cpy_link">CSMIE</a>
           </div>
           <div class="cpy_img2">
             <a href="https://computersciencekaoyan.github.io/" style="text-decoration: none;">
