--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     </div>
   </div>
 <!-- header End-->
-  <div><img src="image/sit_img1.png" width="100%" class="pic_sy1"></div>
-  <img src="image/sit_img2.png" width="100%" class="pic_sy2">
+  <div><img src="image/index_img/sit_img1.png" width="100%" class="pic_sy1"></div>
+  <img src="image/index_img/sit_img2.png" width="100%" class="pic_sy2">
   <div class="content">
     <div class="main_content">
           <table style="width: 100%;">
@@ -45,7 +45,7 @@
                     <div class="en">EVENTS</div><div class="tit">学期信息</div>
                   </div>
                 </td>
-                <td style="width:40%;"><a href="index/overall.html" class="sy-more2">查看更多</a></td>
+                <td class="sy-more2_overall"><a href="index/overall.html" class="sy-more2">查看更多</a></td>
               </tr>
             </tbody>
           </table>
@@ -105,7 +105,7 @@
                     <div class="en">INFORMATION</div><div class="tit">教学文件</div>
                   </div>
                 </td>   
-                <td style="width: 40%;">
+                <td class="sy-more2_overall">
                   <a href="https://gitee.com/Jinhang_Qiu/2022-2026_CSE_Course-structure" class="sy-more2">查看更多</a>
                 </td>
               </tr>
@@ -152,7 +152,7 @@
                 <td class="title_brief">
                   本科生人才培养 / 常用表格下载 / 医学院本科教学 ……
                 </td>
-                <td style="width: 10%;text-align: right;" valign="middle">
+                <td class="sy-more2_overall">
                   <a href="index/download.html" class="sy-more2">查看更多</a>
                 </td>
               </tr>
@@ -208,7 +208,7 @@
             Copyright &copy; All Rights Reserved <br>
             2023 Computer Science and Medical <br class="h_br">Interdisciplinary Engineering <br>
             <a href="index/Legal Info.html" target="_blank" class="cpy_link">Legal Info</a>&ensp;|&ensp;
-            <a href="index.html" target="_blank" class="cpy_link">CSMIE</a>
+            <a href="https://computersciencekaoyan.github.io/" target="_blank" class="cpy_link">CSMIE</a>
           </div>
           <div class="cpy_img2">
             <a href="https://computersciencekaoyan.github.io/" style="text-decoration: none;">
