--- a/index/overall.html
+++ b/index/overall.html
@@ -19,7 +19,7 @@
         <tbody>
           <tr valign="middle">
             <td id="headerimg">
-              <a href="index.html"><img src="image/CSMIE.png" class="CSMIE_img_header"></a>
+              <a href="https://computersciencekaoyan.github.io/"><img src="image/CSMIE.png" class="CSMIE_img_header"></a>
             </td>
             <td class="headertext">
               <div class="h_text">
