--- a/Login.html
+++ b/Login.html
@@ -1,91 +1,47 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
-<head profile="http://gmpg.org/xfn/11">
 <link rel="shortcut icon" href="CSE-MED">
 <title>统一身份认证</title>
+<link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="imagetoolbar" content="no" />
-<link rel="stylesheet" href="index/css/layout.css" type="text/css" />
-<style>
-	input[type=text], select {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link rel="stylesheet" href="index/css/login.css" type="text/css" />
 
-input[type=password]{
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-button {
-  width: 100%;
-  background-color: #4d90fe;
-  color: white;
-  font-weight: bold;
-  font-size: medium;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #4d90fe;
-}
-</style>
-<!-- Homepage Specific Elements -->
-<script type="text/javascript" src="scripts/jquery-1.4.1.min.js"></script>
-<script type="text/javascript" src="scripts/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="scripts/jquery.timers.1.2.js"></script>
-<script type="text/javascript" src="scripts/jquery.galleryview.2.1.1.min.js"></script>
-<script type="text/javascript" src="scripts/jquery.galleryview.setup.js"></script>
-<!-- End Homepage Specific Elements -->
 </head>
-<body id="top">
-<div class="wrapper row1">
-  <div id="header" class="clear">
-    <table  width="100%" border="0" cellspacing="0" cellpadding="0" >
-      <tbody>
-        <tr>
-          <td  width="100%" valign="middle" style="word-break: break-all;" align="left">
-            <img src="image/tyrz.png" width="630">
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+
+<div class="head">
+  <table class="header">
+    <tbody>
+      <tr valign="middle">
+        <td id="headerimg">
+          <a href=""><img src="index/image/tyrz.png" class="login_header"></a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
-<!-- ####################################################################################################### -->
-<br><br><br>
-<div class="wrapper row3">
-  <div id="container" class="clear" style="background-color: LightCyan;">
-    <!-- ####################################################################################################### -->
+
+
+
+<body>
+<div class="content">
+  <div class="main_content">
     <table>
       <tbody style="width: 100%;">
         <tr>
-          <td style="width:55%; text-align: center;">
-            <img src="image/Login.png" alt="Login" width="450" height="450">
+          <td class="image_login">
+            <img src="image/Login.png" alt="Login" class="login">
           </td>
-          <td style="width: 45%;padding-right: 30px;">
-            <div style="font-size:27px;font-weight:bolder;line-height:40px;font-family: 微软雅黑;">统一身份认证</div>
+          <td class="main_ver">
+            <div class="title">统一身份认证</div>
             <br>
-                <div style="border-radius: 5px;background-color: white;padding: 20px;box-shadow: darkgrey 2px 2px 5px 2px" >
-                    <label style="font-family:微软雅黑;font-size:medium;font-weight:bold;">用户名</label>
+                <div class="list_login">
+                    <label class="section">用户名</label>
                     <input type="text" id="Account" placeholder="Account">
-                    <label style="font-family:微软雅黑;font-size:medium;font-weight:bold;">密码</label>
+                    <label class="section">密码</label>
                     <input type="password" id="password" placeholder="Password">
-                    <label style="font-family:微软雅黑;font-size:medium;font-weight:bold;">身份认证</label>
+                    <label class="section">身份认证</label>
                     <select id="country" name="country">
                       <option value="australia">Staff</option>
                       <option value="canada">Student</option>
@@ -97,8 +53,8 @@ input[type=submit]:hover {
         </tr>
       </tbody>
     </table>
-    <br><br>
-		<!---***************************************************************************************-->
+
+		<!--------------------------------------->
 		<script>
 		  function myFunction() {
 			var i,j;
@@ -108,9 +64,9 @@ input[type=submit]:hover {
 				else{alert("Password Failed! Please Input Again!");}
 		}
 		</script>
-    <!---**************************************************************************************-->
-    <!-- ####################################################################################################### -->
-    <div style="font-family:Arial, Helvetica, sans-serif; text-align: center;color: black; font-size: small;padding-bottom: 10px;padding-top: 0px;">
+    <!--------------------------------------->
+    <!-------------copyright----------------->
+    <div class="copyright_login">
       Copyright &copy; 2023 - Department of Computer Science and Medical Interdisciplinary Engineering<br>
       Questions or comments regarding us? Send e-mail to the course Staffs or TAs.
     </div>
