--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head profile="http://gmpg.org/xfn/11">
+<head>
   <link rel="shortcut icon" href="CSE-MED">
   <title>Department of Computer Science and Medical Interdisciplinary Engineering</title>
   <link rel="icon" href="image/CSMIE.ico" type="image/x-icon"/>
