--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="en">EVENTS</div><div class="tit">学期信息</div>
                   </div>
                 </td>
-                <td class="sy-more2_overall"><a href="index/overall.html" class="sy-more2">查看更多</a></td>
+                <td class="sy-more2_overall"><a href="index/news/overall.html" class="sy-more2">查看更多</a></td>
               </tr>
             </tbody>
           </table>
@@ -64,7 +64,7 @@
               <div class="txtList5-m1">
                 <div class="date"><div class="k1"><p>23</p><h3>03</h3></div></div><!-- date end -->
                 <div class="txt1">
-                  <h3><a href='index/Examschedule.html' title='关于2022-2023学年春季学期期末考试时间安排发布的通知'>关于2022-2023学年春季学期期末考试时间安排发布的通知</a></h3>
+                  <h3><a href='index/news/Examschedule.html' title='关于2022-2023学年春季学期期末考试时间安排发布的通知'>关于2022-2023学年春季学期期末考试时间安排发布的通知</a></h3>
                 </div><!-- txt1 end -->
               </div>
             </li>
@@ -73,7 +73,7 @@
               <div class="txtList5-m1">
                 <div class="date"><div class="k1"><p>22 </p><h3>02 </h3></div></div><!-- date end -->
                 <div class="txt1">
-                  <h3><a href='index/Select.html' title='关于2022-2023学年春季学期学生选课通知'>关于2022-2023学年春季学期学生选课通知</a></h3>
+                  <h3><a href='index/news/Select.html' title='关于2022-2023学年春季学期学生选课通知'>关于2022-2023学年春季学期学生选课通知</a></h3>
                 </div><!-- txt1 end -->
               </div>
             </li>
@@ -82,7 +82,7 @@
               <div class="txtList5-m1">
                 <div class="date"><div class="k1"><p> 17</p><h3>02 </h3></div></div><!-- date end -->
                 <div class="txt1">
-                  <h3><a href='index/exam-time.html ' title='关于2022-2023学年春季学期期末考试时间查询的通知'>关于2022-2023学年春季学期期末考试时间查询的通知</a></h3>
+                  <h3><a href='index/news/exam-time.html ' title='关于2022-2023学年春季学期期末考试时间查询的通知'>关于2022-2023学年春季学期期末考试时间查询的通知</a></h3>
                 </div><!-- txt1 end -->
               </div>
             </li>
@@ -153,7 +153,7 @@
                   本科生人才培养 / 常用表格下载 / 医学院本科教学 ……
                 </td>
                 <td class="sy-more2_overall">
-                  <a href="index/download.html" class="sy-more2">查看更多</a>
+                  <a href="index/download/download.html" class="sy-more2">查看更多</a>
                 </td>
               </tr>
             </tbody>
